Prevent game from vertically overflowing.

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,3 +1,8 @@
+  .game-container {
+    height:  100vh;
+    overflow: hidden;
+  }
+  
   .board-area {
     float: left;
     text-align: center;
